[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/subject_selection.gd" id="1_subject"]
[ext_resource type="Theme" path="res://resources/ui/game_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_title_panel"]
bg_color = Color(0.08, 0.06, 0.12, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.55, 0.45, 0.75, 0.6)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.55, 0.4, 0.8, 0.15)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_accent_line"]
bg_color = Color(0.55, 0.45, 0.75, 0.8)
content_margin_top = 2.0
content_margin_bottom = 2.0

[node name="SubjectSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_subject")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.06, 0.12, 1)

[node name="GradientTop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 300.0
grow_horizontal = 2
color = Color(0.15, 0.1, 0.22, 0.5)

[node name="GradientBottom" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.05, 0.03, 0.08, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(650, 620)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_title_panel")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleContainer" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.65, 1)
theme_override_colors/font_shadow_color = Color(0.3, 0.2, 0.5, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 48
text = "Choose Your Subject"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.75, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 16
text = "Questions will be based on Philippine SHS curriculum"
horizontal_alignment = 1

[node name="AccentLine" type="Panel" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_accent_line")

[node name="Spacer" type="Control" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SubjectButtons" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="MathButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/SubjectButtons"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Mathematics"

[node name="ScienceButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/SubjectButtons"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Science"

[node name="EnglishButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer/SubjectButtons"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "English"

[node name="Spacer2" type="Control" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.85, 0.95)
theme_override_font_sizes/font_size = 15
text = "Select a subject to see curriculum details

Use arrow keys to navigate, Enter to select"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 16
text = "< Back"
